--- a/.env.production
+++ b/.env.production
@@ -1,18 +1,18 @@
-
-NEXTAUTH_SECRET=98E3B2CC28F61492C6934531C828C
+NEXTAUTH_SECRET=XIV88/Pjx8N1ImuBeRIKbsLQ5SDIH0mcvU2l1EUd4EU= 
 NEXTAUTH_URL=http://localhost:3000/
 
 NEXT_PUBLIC_DJANGO_API_URL=https://store.istad.co
 
 #Github
-NEXT_PUBLIC_GITHUB_ID=1987af565e1d0a5e6172
-NEXT_PUBLIC_GITHUB_SECRET=97ff4e9aa741cbad1c8ef7b830a8a1a149dea10c
+NEXT_PUBLIC_GITHUB_ID=Ov23limv8i0NjoZdg5u0
+NEXT_PUBLIC_GITHUB_SECRET=cf431b649e0bd04c14741b92072d7e54a5ba8866
 
 # Google
-NEXT_PUBLIC_GOOGLE_CLIENT_ID=1011539386950-7hncd0d5ouqpjsr30qpr3uv5oi1gfpje.apps.googleusercontent.com
-NEXT_PUBLIC_CLIENT_SECRET=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
-
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=293823606196-cbm7vsl577jc7dfbh0tru9dne6cseaij.apps.googleusercontent.com
+NEXT_PUBLIC_CLIENT_SECRET=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
 
 #for refresh token name
 COOKIE_REFRESH_TOKEN_NAME=istad-refresh-token
 DJANGO_API_URL=https://store.istad.co
+
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
